# src/main/java/com/stealadeal/domain/DocumentType.java
@@ -4,5 +4,7 @@ public enum DocumentType {
     BUYER_AGREEMENT,
     DRIVER_LICENSE,
     INSURANCE_PROOF,
-    TITLE_DISCLOSURE
+    TITLE_DISCLOSURE,
+    ODOMETER_DISCLOSURE,
+    AS_IS_DISCLOSURE
 }
